--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script type="text/javascript" src="./SketchfabConfigurator-1.0.6.js"></script>
 <script type="text/javascript">
     var config = {
-    "model": "9e0f0b2e903f413d9151ca9b1f63b87b",
+    "model": "3f51a0e8430e4368b5ebb3e704d763a1",
     "params": {
         "camera": 0,
         "preload": 1,
@@ -30,10 +30,22 @@
     },
     "config": [
         {
-            "name": "Big Eyes",
+            "name": "Big Eyes ($0.50)",
             "type": "visible",
-            "selector": "[instance=\"449\"]",
-            "default": true
+            "selector": "[instance=\"439\"]",
+            "default": false
+        },
+        {
+            "name": "Big Eyes Color",
+            "type": "color",
+            "material": "Material.001",
+            "default": "#272727"
+        },
+        {
+            "name": "Small Eyes Color",
+            "type": "color",
+            "material": "Material.002",
+            "default": "#272727"
         }
     ]
 };
