--- a/index.html
+++ b/index.html
@@ -30,22 +30,28 @@
     },
     "config": [
         {
-            "name": "Small Eyes Color",
+            "name": "Big Eyes",
+            "type": "visible",
+            "selector": "[instance=\"439\"]",
+            "default": true
+        },
+        {
+            "name": "Medium Eyes",
+            "type": "visible",
+            "selector": "[instance=\"427\"]",
+            "default": true
+        },
+        {
+            "name": "Big Eyes Color",
             "type": "color",
             "material": "Material.002",
             "default": "#272727"
         },
         {
-            "name": "Big Eyes Color",
+            "name": "Medium Eyes Color",
             "type": "color",
             "material": "Material.001",
             "default": "#272727"
-        },
-        {
-            "name": "Big Eyes ($0.50)",
-            "type": "visible",
-            "selector": "[instance=\"439\"]",
-            "default": false
         }
     ]
 };
