--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     },
     "config": [
         {
-            "name": "Big Eyes",
+            "name": "Big Eyes ($1.50)",
             "type": "visible",
             "selector": "[instance=\"439\"]",
-            "default": true
+            "default": false
         },
         {
-            "name": "Medium Eyes",
+            "name": "Medium Eyes ($1.50)",
             "type": "visible",
             "selector": "[instance=\"427\"]",
             "default": true
@@ -44,14 +44,58 @@
         {
             "name": "Big Eyes Color",
             "type": "color",
-            "material": "Material.002",
-            "default": "#272727"
+            "material": "Material.001",
+            "default": "#272727",
+            "options": [
+                {
+                    "name": "Yellow",
+                    "color": "#645400",
+                    "id": 1651155647594
+                },
+                {
+                    "name": "Green",
+                    "color": "#025801",
+                    "id": 1651155647594
+                },
+                {
+                    "name": "Red",
+                    "color": "#591700",
+                    "id": 1651155647594
+                },
+                {
+                    "name": "Blue",
+                    "color": "#003958",
+                    "id": 1651155647594
+                }
+            ]
         },
         {
             "name": "Medium Eyes Color",
             "type": "color",
-            "material": "Material.001",
-            "default": "#272727"
+            "material": "Material.002",
+            "default": "#272727",
+            "options": [
+                {
+                    "name": "Yellow",
+                    "color": "#645400",
+                    "id": 1651155663005
+                },
+                {
+                    "name": "Green",
+                    "color": "#025801",
+                    "id": 1651155663005
+                },
+                {
+                    "name": "Red",
+                    "color": "#591700",
+                    "id": 1651155663005
+                },
+                {
+                    "name": "Blue",
+                    "color": "#003958",
+                    "id": 1651155663005
+                }
+            ]
         }
     ]
 };
